Pushing everything up so I can move it to my new mac

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+virtualenv
 flask
 flask-sqlalchemy
 sqlalchemy-migrate
 flask-whooshalchemy
 flask-wtf
 jsonpickle
+python-social-auth
+flask-login
+flask-openid
